--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "autoprefixer": "^9.4.2",
+    "babel": "^6.23.0",
     "babel-core": "^6.26.3",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^8.0.4",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
+    "postcss": "^7.0.7",
+    "postcss-import": "^12.0.1",
     "postcss-load-config": "^2.0.0",
     "postcss-loader": "^3.0.0",
+    "postcss-url": "^8.0.0",
+    "readable-stream": "^2.3.6",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
