--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node_modules/.bin/webpack --config webpack.config.js --mode production",
-    "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --mode development --open "
+    "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js --mode development --open ",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.0.0",
     "autoprefixer": "^9.4.2",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-preset-env": "^1.6.1",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
     "postcss": "^7.0.7",
@@ -36,7 +36,13 @@
     "webpack": "^4.27.1"
   },
   "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "clean-webpack-plugin": "^1.0.0",
     "cross-env": "^5.2.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^3.2.0",
     "vue-template-compiler": "^2.5.17",
     "webpack-cli": "^3.1.2",
