--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ after_script:
   # Github Pages
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
   # Github Pages
-  - git push --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages --tags
+  - git push --quiet "https://${GH_TOKEN}@${GH_REF}" master:master --tags
 # E: Build LifeCycle
 
 branches:
