--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ after_script:
   - git commit -m "Update Blog By TravisCI With Build $TRAVIS_BUILD_NUMBER"
   # Github Pages
   - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
+  # Add Tag
+  - git tag v0.0.$TRAVIS_BUILD_NUMBER -a -m \"Auto Taged By TravisCI With Build $TRAVIS_BUILD_NUMBER\",
   # Github Pages
   - git push --quiet "https://${GH_TOKEN}@${GH_REF}" master:master --tags
 # E: Build LifeCycle
