--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ after_script:
   # Add Tag
   - git tag v0.0.$TRAVIS_BUILD_NUMBER -a -m \"Auto Taged By TravisCI With Build $TRAVIS_BUILD_NUMBER\",
   # Github Pages
-  - git push --quiet "https://${GH_TOKEN}@${GH_REF}" master:master --tags
+  - git push --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages --tags
 # E: Build LifeCycle
 
 branches:
